--- a/.github/workflows/autograding.yml
+++ b/.github/workflows/autograding.yml
@@ -1,1 +1,29 @@
 
+name: Autograding
+
+on:
+  push:
+    branches: [ main ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python environment
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+
+    #- name: Install dependencies
+    #  run: pip install -r requirements.txt
+
+    - name: Run tests
+      run: python -m unittest test_create_files.py
+
+    - name: Provide feedback
+      if: ${{ job.status == 'failure' }}
+      run: echo "The test failed. Please try again."
